# CppParSOM

./: CMakeLists.txt  globals.h  main.cpp  metrics.h  operators.h  report_cpp_adv.csv  somClasses.cpp  somClassesAdv.cpp  somNode.cpp  somTimer.cpp
reports/: logexp1.txt  logexp2.txt  logexp3.txt  report_cpp_adv.csv  report_cpp_adv_dynamic.csv  report_cpp_adv_static.csv
reports - Copia/: report_cpp.csv  report_cpp_adv_dynamic.csv  report_cpp_adv_static.csv
